# spmc

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  archive.c  config.c  config.h.in  config_global.c  deps.c  doxygen.conf  fstree.c  install.c  main.c  spm.c  spm.h  strings.c
.circleci/: config.yml  init.sh  install_reloc.sh  install_spm.sh  runtime.sh  test_spm.sh
.github/workflows/: ccpp.yml
images/spmbuild/: Dockerfile
include/: CMakeLists.txt  archive.h  checksum.h  compat.h  conf.h  deps.h  environment.h  error_handler.h  find.h  fs.h  install.h  internal_cmd.h  manifest.h  metadata.h  mime.h  mirrors.h  package.h  purge.h  relocation.h  resolve.h  rpath.h  shell.h  shlib.h  spm.h  str.h  strlist.h  url.h  user_input.h  version_spec.h
lib/: CMakeLists.txt  archive.c  checksum.c  compat.c  config.c  config_global.c  environment.c  error_handler.c  find.c  fs.c  install.c  internal_cmd.c  manifest.c  mime.c  mirrors.c  purge.c  relocation.c  resolve.c  rpath.c  shell.c  shlib.c  str.c  strlist.c  user_input.c  version_spec.c
scripts/: CMakeLists.txt  realpath.c  spmbuild
src/: CMakeLists.txt  archive.c  checksum.c  compat.c  config.c  config_global.c  deps.c  environment.c  find.c  fs.c  install.c  internal_cmd.c  manifest.c  metadata.c  mime.c  mirrors.c  purge.c  relocation.c  resolve.c  rpath.c  shell.c  shlib.c  spm.c  spm_build.c  str.c  strings.c  strlist.c  user_input.c  version_spec.c
tests/: CMakeLists.txt  framework.h  test_checksum_sha256.c  test_config_read.c  test_environment.c  test_error_handler_spm_perror.c  test_error_handler_spm_strerror.c  test_error_handler_spmerrno_cause.c  test_fs_expandpath.c  test_fs_fslist.c  test_fs_fstree.c  test_fs_fstree_ex.c  test_fs_get_file_size.c  test_fs_human_readable_size.c  test_fs_mkdirs.c  test_fs_touch.c  test_relocation_file_replace_text.c  test_relocation_relocate.c  test_relocation_replace_text.c  test_rpath_rpath_get.c  test_shell_shell.c  test_shlib_spm_shlib_deps.c  test_spm_get_package_info_str.c  test_spm_mkdtemp.c  test_str_endswith.c  test_str_isdigit_s.c  test_str_isempty.c  test_str_isquoted.c  test_str_isrelational.c  test_str_join.c  test_str_join_ex.c  test_str_lstrip.c  test_str_normalize_space.c  test_str_num_chars_generic.c  test_str_print_banner.c  test_str_split.c  test_str_startswith.c  test_str_strchrdel.c  test_str_strchroff.c  test_str_strdeldup.c  (+9 more)
