install(
	FILES
		${CMAKE_BINARY_DIR}/include/config.h
		archive.h
		checksum.h
		compat.h
		conf.h
		environment.h
		find.h
		fs.h
		install.h
		internal_cmd.h
		manifest.h
		metadata.h
		mime.h
		mirrors.h
		package.h
		purge.h
		relocation.h
		resolve.h
		rpath.h
		shell.h
		shlib.h
		spm.h
		str.h
		strlist.h
		url.h
		user_input.h
		version_spec.h

	DESTINATION "${CMAKE_INSTALL_PREFIX}/include/${PROJECT_NAME}"
)
